--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DevConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CoreProject;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  },
   "AllowedHosts": "*"
 }
